# racy-fastapi

./: .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml
migrations/versions/: 1d91f2df3aa2_create_table.py
racy/: main.py
tests/: test_main.py
