[tool.poetry]
name = "racy-fastapi"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "racy"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
databases = "^0.7.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
